# BoredChat

./: .gitignore  README.md  pyproject.toml  setup.cfg
boredchat/: __init__.py  __main__.py  messaging.py
static/css/: chat.css  index.css
static/js/: chat.js
templates/: chat.html  index.html  tips.html
