[metadata]
name = boredchat
version = 1.0
author = Jake Goodyear
author_email = jakengoodyear@gmail.com
description = Im bored Im bored Im bored Im bored Im bored Im bored Im bored
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    Flask
    flask-sock
    gevent
packages = find:
zip_safe = True